# Mesh_Computer_Geometry

./: CMakeLists.txt
Asset/: champi.off  robot.off  square.off
Asset/terrain_pointClouds/: alpes_poisson.txt  alpes_random_1.txt  alpes_random_2.txt  noise_poisson.txt  noise_random_1.txt  noise_random_2.txt
Include/: GeometricWorld.h  MainWindow.h  Mathematics.h  Mesh.h  Structures.h  Utils.h  glDisplayWidget.h  gldisplaywidget.h  mesh.h
Source/: GeometricWorld.cpp  MainWindow.cpp  Mesh.cpp  Structures.cpp  glDisplayWidget.cpp  gldisplaywidget.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mesh.cpp  test.cpp
